--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+
+# Articy Plugin
+# =====================================
+Assets/ArticyContent/Generated/
